# pelt

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  main_bench.yml  release_pypi.yaml  test.yml
benches/: bench.rs  bench_compare.py
docs/source/: conf.py  index.rst
examples/: simple.rs
src/: cost.rs  dim.rs  error.rs  lib.rs  predict.rs  python.rs
src/cost/: l1.rs  l2.rs  mod.rs  tree.rs
tests/: common.rs  normal-10.csv  signals.rs
