[package]
name = "pelt"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Thomas Versteeg <t.versteeg@cemsbv.io>"]
description = "Changepoint detection with Pruned Exact Linear Time"
keywords = ["changepoint"]
categories = ["mathematics"]
repository = "https://github.com/cemsbv/pelt"
documentation = "https://docs.rs/pelt/"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
ahash = "0.8.12"
medians = "3.0.12"
ndarray = "0.17.1"
thiserror = "2.0.17"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "bench"
harness = false

# Additional clippy lints, check status at: https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
# Nursery
nursery = { level = "warn", priority = -1 }
iter_with_drain = "allow"

# Restrictions
dbg_macro = "warn"
decimal_literal_representation = "warn"
deref_by_slicing = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mutex_atomic = "warn"
non_zero_suggestions = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
renamed_function_params = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Cargo
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
