[package]
name = "pelt"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Thomas Versteeg <t.versteeg@cemsbv.io>"]
description = "Changepoint detection with Pruned Exact Linear Time"
keywords = ["changepoint"]
categories = ["mathematics"]
repository = "https://github.com/cemsbv/pelt"
documentation = "https://docs.rs/pelt/"
license = "MPL-2.0"
readme = "README.md"

[lib]
name = "pelt"
crate-type = ["cdylib", "rlib"]

[features]
default = ["rayon"]
rayon = [
  "dep:rayon",
]
python = ["dep:numpy", "dep:pyo3"]

[dependencies]
accurate = { default-features = false, version = "0.4.1" }
ahash = "0.8.12"
branches = { version = "0.4.3", default-features = false }
# TODO: wait for the release so we can add `f64s`
# fearless_simd = "0.3.0"
fearless_simd = { git = "https://github.com/linebender/fearless_simd" }
ndarray = { version = "0.17.1", default-features = false }
smallvec = "2.0.0-alpha.12"
thiserror = { version = "2.0.17", default-features = false }

# Behind `rayon` feature flag
rayon = { optional = true, version = "1.11.0" }

# Behind `python` feature flag
numpy = { optional = true, version = "0.27.1" }
pyo3 = { features = ["extension-module"], optional = true, version = "0.27.2" }

[dev-dependencies]
csv = "1.4.0"
divan = "0.1.21"
ndarray-csv = "0.5.4"

[[bench]]
name = "bench"
harness = false

# Make samply work
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Create optimized small binaries for benchmarks
[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "abort"

# Additional clippy lints, check status at: https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
# Nursery
nursery = { level = "warn", priority = -1 }
iter_with_drain = "allow"

# Restrictions
dbg_macro = "warn"
decimal_literal_representation = "warn"
deref_by_slicing = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mutex_atomic = "warn"
non_zero_suggestions = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
renamed_function_params = "warn"
self_named_module_files = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
try_err = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Cargo
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
