[project]
name = "pelt"
# Load fields from Cargo.toml
dynamic = [
  "version",
  "license",
  "description",
  "keywords",
  "author",
  "author_email",
  "project_url",
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.16.0"]

[project.urls]
repository = "https://github.com/cemsbv/pelt"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
profile = "release"
strip = true
bindings = "pyo3"
module-name = "pelt"

# Create an SBOM
[tool.maturin.sbom]
rust = true
